crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__array__fill.snap
---
source: crates/service/tests/diagnostics/typeck/array.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 8,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $arr8_mut), i32, i8, i32], found [(ref $arr8_mut), i32, (ref null func), i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 6
              },
              "end": {
                "line": 7,
                "character": 20
              }
            }
          },
          "message": "expected type `i8`, found `(ref null func)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 4
        },
        "end": {
          "line": 16,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $b), i32, (ref null func), i32], found [(ref $b), i32, i32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 6
              },
              "end": {
                "line": 15,
                "character": 20
              }
            }
          },
          "message": "expected type `(ref null func)`, found `i32`"
        }
      ]
    }
  ]
}
