crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__array__new.snap
---
source: crates/service/tests/diagnostics/typeck/array.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 10,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [i32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 10,
                "character": 6
              },
              "end": {
                "line": 10,
                "character": 19
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 6
              },
              "end": {
                "line": 9,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        }
      ]
    }
  ]
}
